10207
This means compile and eval have different semantics with respect to REPL history:
{code}
scala> val e = engine.asInstanceOf[ScriptEngine with Compilable]
e: javax.script.ScriptEngine with javax.script.Compilable = scala.tools.nsc.interpreter.IMain@1f28c152

scala> val s = e.compile("val x = 42")
s: javax.script.CompiledScript = $anon$1@4e423aa2

scala> s.eval()
res0: Object = ()

scala> e.eval("x")
<console>:11: error: not found: value x
       x
       ^
javax.script.ScriptException: compile-time error
  at scala.tools.nsc.interpreter.IMain.compiled(IMain.scala:600)
  at scala.tools.nsc.interpreter.IMain.eval(IMain.scala:1066)
  at javax.script.AbstractScriptEngine.eval(AbstractScriptEngine.java:264)
  ... 33 elided

scala> e.eval("val x = 42")
res2: Object = 42

scala> e.eval("x")
res3: Object = 42
{code}
